...
                                                <subviews>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="87C-iX-Kvv">
                                                        <rect key="frame" x="0.0" y="0.0" width="304" height="67.5"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Owner" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="9L2-CU-KSw">
                                                                <rect key="frame" x="10" y="25" width="284" height="37.5"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="ownerTextfieldIdentifier"/>
                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no"/>
                                                            </textField>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Repository owner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Se5-c8-dBR">
                                                                <rect key="frame" x="10" y="5" width="284" height="17"/>
...
                                                    </view>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WPO-Lw-SlT">
                                                        <rect key="frame" x="0.0" y="67.5" width="304" height="67"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repository" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="DXS-Zu-VtT">
                                                                <rect key="frame" x="10" y="25" width="284" height="37"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="repoTextfieldIdentifier"/>
                                                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no"/>
                                                            </textField>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Repository name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIn
                                                                <rect key="frame" x="10" y="5" width="284" height="17"/>
...
                                        <rect key="frame" x="304" y="0.0" width="110" height="134.5"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tug-JH-WQZ" customClass="CustomButton" customModule="Stargazers" customModuleProvider="target">
                                                <rect key="frame" x="15" y="30.5" width="80" height="73.5"/>
                                                <color key="backgroundColor" systemColor="systemBlueColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                <state key="normal" title="Search">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="roundedRadius">
                                                        <real key="value" value="5"/>
                                                    </userDefinedRuntimeAttribute>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="viewContainerIdentifier"/>
                                <constraints>
                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="lwK-eZ-Lty" secondAttribute="bottom" constant="15" id="331-nz-iGo"/>
                                    <constraint firstAttribute="trailing" secondItem="lwK-eZ-Lty" secondAttribute="trailing" constant="10" id="GSI-Dg-5gU"/>
                                    <constraint firstItem="lwK-eZ-Lty" firstAttribute="leading" secondItem="BvF-54-zpl" secondAttribute="leading" constant="10" id="IgC-PP-CN6"/>
                                    <constraint firstAttribute="trailing" secondItem="hq6-N1-bqu" secondAttribute="trailing" constant="10" id="QOv-Ag-gFZ"/>
                                    <constraint firstItem="buu-dS-6ru" firstAttribute="top" secondItem="BvF-54-zpl" secondAttribute="top" constant="30" id="SfN-mj-geN"/>
...
